crates/util/src/snapshots/marzano_util__diff__tests__parse_one_file_diff.snap
---
source: crates/util/src/diff.rs
expression: parsed
---
- old_path: crates/cli_bin/fixtures/es6/empty_export_object.js
  new_path: crates/cli_bin/fixtures/es6/empty_export_object.js
  ranges:
    - before:
        start:
          line: 8
          column: 1
        end:
          line: 9
          column: 1
      after:
        start:
          line: 8
          column: 1
        end:
          line: 9
          column: 1
