crates/util/src/snapshots/marzano_util__diff__tests__parse_with_deleted_file.snap
---
source: crates/util/src/diff.rs
expression: parsed
---
- old_path: crates/cli_bin/fixtures/es6/empty_export_object.js
  new_path: crates/cli_bin/fixtures/es6/empty_export_object.js
  ranges:
    - before:
        start:
          line: 8
          column: 1
        end:
          line: 8
          column: 23
      after:
        start:
          line: 8
          column: 1
        end:
          line: 8
          column: 28
- old_path: crates/cli_bin/fixtures/es6/export.js
  new_path: ~
  ranges: []
- old_path: crates/cli_bin/fixtures/es6/export_object.js
  new_path: crates/cli_bin/fixtures/es6/export_object.js
  ranges:
    - before:
        start:
          line: 1
          column: 1
        end:
          line: 19
          column: 28
      after:
        start:
          line: 1
          column: 1
        end:
          line: 1
          column: 1
    - before:
        start:
          line: 5
          column: 1
        end:
          line: 5
          column: 60
      after:
        start:
          line: 5
          column: 1
        end:
          line: 7
          column: 3
