crates/util/src/snapshots/marzano_util__diff__tests__parses_verified_baseline.snap
---
source: crates/util/src/diff.rs
expression: parsed
---
- oldPath: crates/cli/src/analyze.rs
  newPath: crates/cli/src/analyze.rs
  ranges:
    - before:
        start:
          line: 12
          column: 1
        end:
          line: 13
          column: 1
      after:
        start:
          line: 12
          column: 1
        end:
          line: 13
          column: 1
