crates/util/src/snapshots/marzano_util__diff__tests__processes_multiline_edit.snap
---
source: crates/util/src/diff.rs
expression: parsed
---
- old_path: crates/util/fixtures/file.multiline.js
  new_path: crates/util/fixtures/file.multiline.js
  ranges:
    - before:
        start:
          line: 4
          column: 1
        end:
          line: 6
          column: 1
      after:
        start:
          line: 4
          column: 1
        end:
          line: 7
          column: 1
