crates/util/src/snapshots/marzano_util__diff__tests__processes_newline_add.snap
---
source: crates/util/src/diff.rs
expression: parsed
---
- oldPath: crates/util/fixtures/file.baseline.js
  newPath: crates/util/fixtures/file.newline.js
  ranges:
    - before:
        start:
          line: 8
          column: 1
        end:
          line: 8
          column: 1
      after:
        start:
          line: 8
          column: 1
        end:
          line: 9
          column: 1
