crates/util/src/snapshots/marzano_util__diff__tests__processes_newline_rm.snap
---
source: crates/util/src/diff.rs
expression: parsed
---
- oldPath: crates/util/fixtures/file.baseline.js
  newPath: crates/util/fixtures/file.baseline.js
  ranges:
    - before:
        start:
          line: 7
          column: 1
        end:
          line: 8
          column: 1
      after:
        start:
          line: 7
          column: 1
        end:
          line: 7
          column: 1
